@@ -30,6 +30,10 @@ Bug fixes
 - Updated the ZODB members directory profile so that is uses substring search
   for fullname too. This makes it possible to use CPSNavigation search in this
   context.
+- In the RootsXMLAdapter added the possibility to be able to deal with multiple
+  meta_type definitions defining the same meta_type and only considering the
+  definition holding a class definition. This is for example to take advantage
+  of the five:registerClass directive.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - Updated import step dependency to work with CMF 1.6.3
